force-app/main/default/objects/Marketing_Program__c/Marketing_Program__c.object-meta.xml
<CustomObject>
    <label>Sales Program</label>
    <nameField>
        <label>Marketing Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>