force-app/main/default/objects/Marketing_Program__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>