force-app/main/default/objects/Marketing_Program__c/fields/MarketingProgram_OfferPortfolio__c.field-meta.xml
<CustomField>
    <fullName>MarketingProgram_OfferPortfolio__c</fullName>
    <description>External Id to be used to upsert. Combination of Marketing Program name and offer portfolio uniquely identifies a record</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id to be used to upsert</inlineHelpText>
    <label>MarketingProgram_OfferPortfolio</label>
    <length>160</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>