force-app/main/default/objects/Marketing_Program__c/fields/Offer_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Offer_Portfolio__c</fullName>
    <label>Offer Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alaric</fullName>
            </value>
            <value>
                <fullName>Banking Re-Imaged</fullName>
            </value>
            <value>
                <fullName>Digital Banking</fullName>
            </value>
            <value>
                <fullName>Entertainment Self Service</fullName>
            </value>
            <value>
                <fullName>Financial Self Service</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Healthcare Self-Service</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>IPS</fullName>
            </value>
            <value>
                <fullName>Multi Channel Software</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>PC / ELS</fullName>
            </value>
            <value>
                <fullName>Retail Assisted Service</fullName>
            </value>
            <value>
                <fullName>Retail Self Service</fullName>
            </value>
            <value>
                <fullName>Retalix</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Travel Self Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>