force-app/main/default/objects/Marketing_Program__c/validationRules/Prevent_users_create_modify_records.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_users_create_modify_records</fullName>
    <active>true</active>
    <description>Only Administrator profiles can insert or update records.</description>
    <errorConditionFormula>Not(OR( ($Profile.Name = &quot;02 NSC Administrator&quot;) 
,($Profile.Name = &quot;04 NSC UI Administrator&quot;)
,($Profile.Name = &quot;03 PRM Admin&quot;) 
,($Profile.Name = &quot;System Administrator&quot;) ))</errorConditionFormula>
    <errorMessage>Insufficient Privileges. You do not have the level of access necessary to perform the operation you requested</errorMessage>
</ValidationRule>