force-app/main/default/objects/Marketing_Program__c/listViews/AllSalesPrograms.listView-meta.xml
<ListView>
    <fullName>AllSalesPrograms</fullName>
    <columns>NAME</columns>
    <columns>ID__c</columns>
    <columns>Active__c</columns>
    <columns>Industry__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>