force-app/main/default/objects/Marketing_Program__c/listViews/Sales_Program_Active.listView-meta.xml
<ListView>
    <fullName>Sales_Program_Active</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Program_Start_Date__c</columns>
    <columns>Program_End_Date__c</columns>
    <columns>Comments__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sales Program_Active</label>
</ListView>